First rotation of Destruction Warlock for MoP

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -35,6 +35,7 @@
         "UnitExists",
         "UnitGUID",
         "UnitIsUnit",
+        "UnitPower",
         // WoW constants
         "WOW_PROJECT_ID",
 //        "WOW_PROJECT_BURNING_CRUSADE_CLASSIC",
