Return objects instead of tuples
This applies to:
- isAuraExpired
- canCast

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,26 +16,33 @@
         // Utility functions
         "DevTools_Dump",
         // WoW global objects
-//        "Enum",
+        "Enum",
         // WoW UI helpers
 //         "CreateFrame",
 //         "GameFontNormalLarge",
-//         "WrapTextInColorCode",
+        "WrapTextInColorCode",
         // WoW game API
+        "C_Container",
         "C_Spell",
         "C_UnitAuras",
         "CombatLogGetCurrentEventInfo",
         "GetSpellCooldown",
+        "GetSpellCritChance",
         "GetSpellInfo",
         "GetTime",
         "InCombatLockdown",
+        "IsEquippedItem",
         "IsSpellKnownOrOverridesKnown",
         "IsUsableSpell",
+        "UnitBuff",
         "UnitCanAttack",
+        "UnitDebuff",
         "UnitExists",
         "UnitGUID",
         "UnitIsUnit",
         "UnitPower",
+        "UnitPowerMax",
+        "UnitSpellHaste",
         // WoW constants
         "WOW_PROJECT_ID",
 //        "WOW_PROJECT_BURNING_CRUSADE_CLASSIC",
