Evaluate Chaos Bolt damage for Burst window

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,10 @@
         "C_Spell",
         "C_UnitAuras",
         "CombatLogGetCurrentEventInfo",
+        "GetCombatRating",
+        "GetCombatRatingBonus",
+        "GetMastery",
+        "GetSpellBonusDamage",
         "GetSpellCooldown",
         "GetSpellCritChance",
         "GetSpellInfo",
@@ -36,14 +40,18 @@
         "IsUsableSpell",
         "UnitBuff",
         "UnitCanAttack",
+        "UnitDamage",
         "UnitDebuff",
         "UnitExists",
         "UnitGUID",
         "UnitIsUnit",
+        "UnitLevel",
         "UnitPower",
         "UnitPowerMax",
         "UnitSpellHaste",
         // WoW constants
+        "CR_CRIT_SPELL",
+        "CR_HASTE_SPELL",
         "WOW_PROJECT_ID",
 //        "WOW_PROJECT_BURNING_CRUSADE_CLASSIC",
 //        "WOW_PROJECT_CATACLYSM_CLASSIC",
